# learning-ID3

./: CMakeLists.txt  DataEngine.h  DecisionTree.h  README.md  adult.names  build_random_trees.cpp  compiling_error.txt  file  prune_rules.cpp  random_dataset.cpp  test.cpp  test_forest.cpp
candidate elimination/: README.md  a.out  data.txt  main.cpp
random_forest/: adultTraining0  adultTraining1  adultTraining10  adultTraining100  adultTraining101  adultTraining102  adultTraining103  adultTraining104  adultTraining105  adultTraining106  adultTraining107  adultTraining108  adultTraining109  adultTraining11  adultTraining110  adultTraining111  adultTraining112  adultTraining113  adultTraining114  adultTraining115  adultTraining116  adultTraining117  adultTraining118  adultTraining119  adultTraining12  adultTraining120  adultTraining121  adultTraining122  adultTraining123  adultTraining124  adultTraining125  adultTraining126  adultTraining127  adultTraining13  adultTraining14  adultTraining15  adultTraining16  adultTraining17  adultTraining18  adultTraining19  (+88 more)
random_rule_bases/: random_rule_base0  random_rule_base1  random_rule_base10  random_rule_base100  random_rule_base101  random_rule_base102  random_rule_base103  random_rule_base104  random_rule_base105  random_rule_base106  random_rule_base107  random_rule_base108  random_rule_base109  random_rule_base11  random_rule_base110  random_rule_base111  random_rule_base112  random_rule_base113  random_rule_base114  random_rule_base115  random_rule_base116  random_rule_base117  random_rule_base118  random_rule_base119  (+104 more)
(+2 files in other folders)
