cmake_minimum_required(VERSION 3.2)
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_BUILD_TYPE Debug)
set (CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "-O2 -Wall -Wextra")
project(test_project)
add_executable(random_dataset random_dataset.cpp)
add_executable(test_p test.cpp)
add_executable(build_random_trees build_random_trees.cpp)
add_executable(test_forest test_forest.cpp)
add_executable(prune_rules prune_rules.cpp)

find_package(SQLiteCpp REQUIRED)
target_link_libraries(test_p SQLiteCpp sqlite3)
target_link_libraries(build_random_trees SQLiteCpp sqlite3)
target_link_libraries(test_forest SQLiteCpp sqlite3)
target_link_libraries(prune_rules SQLiteCpp sqlite3)
